parser.y
%{
	#include <stdio.h>
  #include <stdlib.h>
  #include <string.h>
	#include "parser.tab.h"
  #include <stdbool.h>

  //typedef struct clause clause_t;
  //typedef struct literal literal_t;
  //typedef struct literal_symbol literal_symbol_t;

  typedef struct clause {
    char *name;
    int term_count;
    struct literal *next_literal;
    struct clause *next;
  } clause_t;

  typedef struct literal {
    char *text;
    struct literal *next_literal;
  } literal_t;

  struct literal_symbol {
    char * text;
    struct var_symbol *var_list;
    struct literal_symbol *next;
  };

  struct var_symbol {
    char *name;
    struct var_symbol *next;
  };


	int main(void);
  void print_l(struct var_symbol *p);
  void yyerror(char*);
	int yylex();
  void add_clause();
  void add_literal();
  void print_symboltable();


clause_t * symbol_table;

  struct var_symbol *create_new_list(char *str) {
    struct var_symbol *new = calloc(1, sizeof(struct var_symbol));
    new->next = NULL;
    new->name = strdup(str);
    return new;
  }

  struct var_symbol *merge_list(struct var_symbol *left, struct var_symbol *right) {
    if (left == NULL) { return right; }
    if (right == NULL) { return left; }

    struct var_symbol *left_end = left;
    while (left_end->next != NULL) {
      left_end = left_end->next;
    }

    struct var_symbol *right_element = right;
    while (right_element != NULL) {
      char duplicate = 0;

      struct var_symbol *left_element = left;
      while (left_element != NULL) {
        if (strcmp(left_element->name, right_element->name) == 0) {
          duplicate = 1;
          break;
        }

        left_element = left_element->next;
      }

      if (duplicate == 0) {
        left_end->next = right_element;
        left_end = right_element;
      }

      right_element = right_element->next;
    }

    return left;
  }



%}

%union {
  struct var_symbol *smbl;
  char *ch;
}

%token <ch> atom variable numeral dot def com op cp ob cb vert is
%type <ch> FACT RULE TERM TERM_L OPERAND COMP ARITH LIST LITERAL LITERAL_L FUNCTION

%left <ch> lt lte st ste eq eqeq neq neqeq plus minus times divby

%start S_L

%debug
%initial-action {
  yydebug = 0;
}

%%

S_L: S_L S	{ ; }
	| S	{ ; }
	;

S: FACT {/*print_l($1);*/ add_clause($1);  }
	|	RULE { /*print_l($1);*/ add_clause($1); }
	;

FACT:	LITERAL dot { $$ = $1; }
	;

RULE:	LITERAL def LITERAL_L dot {  }
	;

LITERAL: atom op TERM_L cp { $$ = $3; add_literal($1); }
  | ARITH { $$ = $1; add_literal($1);}
  | COMP { $$ =$1; add_literal($1);}
	| atom { $$ = NULL;add_literal($1); }
  | variable is OPERAND { add_literal($1,$2,$3); }
	;

LITERAL_L: LITERAL com LITERAL_L {  }
	| LITERAL { $$ = $1; }
	;

TERM_L: TERM_L com TERM {  }
	| TERM { $$ = $1; }
	;

TERM:   ARITH { $$ = $1; }
  | FUNCTION { $$ = $1; }
  | LIST { $$ = $1; }
  | COMP { $$ = $1; } 
  | atom { $$ = NULL; }
  | numeral { $$ = NULL; }
//  | variable { $$ = create_new_list($1); }
  ;

ARITH: OPERAND plus OPERAND { $$ = $2; sprintf($$,"%s %s %s",$1,$2,$3);}
  | OPERAND minus OPERAND { }
  | OPERAND times OPERAND {  }
  | OPERAND divby OPERAND {}
  | op ARITH cp { $$ = $2; }
  ;

COMP: OPERAND lt OPERAND {  }
  | OPERAND lte OPERAND {  }
  | OPERAND st OPERAND {  }
  | OPERAND ste OPERAND {  }
  | OPERAND eq OPERAND {  }
  | OPERAND eqeq OPERAND {  }
  | OPERAND neq OPERAND {  }
  | OPERAND neqeq OPERAND {  }
  ; 

OPERAND: ARITH {  } 
  | variable { }
  | numeral { }
  ;

LIST:	ob TERM_L vert LIST cb { }
	| ob TERM_L cb {  }
	|	ob cb {  }
	|	variable {  }
  ;

FUNCTION: atom op TERM_L cp {  }
  ;



%%

int main(void) {	
  yyparse();
  print_symboltable();
  return 0;
}

void add_clause(){
  clause_t *old_clause = symbol_table;
  symbol_table = (clause_t *) malloc(sizeof(clause_t));
  symbol_table->next=old_clause;
}

void add_literal(char* text){
  //if(text==NULL){text="##";}  
  if(symbol_table==NULL){ return;}
  literal_t *old_literal = (literal_t *) symbol_table->next_literal; // save current literal list pointer
  literal_t *new_literal = (literal_t *) malloc(sizeof(literal_t)); // allocate new list element
  
  new_literal->text = malloc(255 * sizeof(char));

  if(text!=NULL){
    strcpy(new_literal->text,text);
  }
  new_literal->next_literal =  old_literal;
  symbol_table->next_literal = new_literal;
 /* symbol_table->next_literal= (literal *)new_literal;
  new_literal->next_literal = (literal *) old_literal;*/
}

void print_symboltable(){
  printf("symbol table\n");
  int counter=1;
  clause_t* current = symbol_table;

  while(current != NULL){
    printf("%d clause: \n",counter);

    literal_t * current_literal = current->next_literal;
    while(current_literal != NULL){

      if(current_literal->text!=NULL){
        printf("\tliteral %s\n",current_literal->text);
      }else{
        printf("\txx\n");
      }

      current_literal=current_literal->next_literal;
    }

    current=current->next;
    counter++;
  }
}

void print_l(struct var_symbol *p) {
    printf("Recognized: ");
    while (p != NULL) {
      printf("%s", p->name);
      p = p->next;
      if (p != NULL) {
        printf(", ");
      }
    }
    printf("\n");
}

void yyerror(char *err) {
	printf("%s",err);
}
